--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,22 @@
-{"flutter":{"platforms":{"dart":{"lib/firebase_options.dart":{"projectId":"zerbee-privacy","configurations":{"web":"1:855374377717:web:d1e721478de73e7ca58bbc"}}}}}}
+{
+  "flutter": {
+    "platforms": {
+      "dart": {
+        "lib/firebase_options.dart": {
+          "projectId": "zerbee-privacy",
+          "configurations": {
+            "web": "1:855374377717:web:d1e721478de73e7ca58bbc"
+          }
+        }
+      }
+    }
+  },
+  "hosting": {
+    "public": "build/web",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ]
+  }
+}
